--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>Friends</title>
+        <title>WWI Museum in KC</title>
     </head>
     <body>
         <h1>Dallas Williams</h1>
         <h2>National WWI Museum and Memorial</h2>
         <p>There are plenty of things to do and see at this museum. You can see many artifacts such as <b>tanks</b> and planes that were used. 
            You can also see the weapons and what it was like to be in the <b>trenches</b> and how they worked.</p>
+        <hr></hr>
+        <h1>Directions</h1>
+        <h2>Kansas City International Airport</h2>
+        <ol>
+            <li>Exit the parking lot on N Winan Ave to NW 120th St</li>
+            <li>Exit onto 1-29 south</li>
+            <li>After passing NW Waukomis Dr, Exit onto Highway 169 south
+                <ol>
+                    <li> Then exit onto I-35 south</li>
+                    <li>Then you will exit onto Broadway Blvd heading south</li>
+                </ol>
+            </li>
+            <li>Take a left onto 29th street</li>
+            <li>Next, head straight onto Liberty Memorial Mall and Park.</li>
+        </ol>
+
     </body>
 </html>
