--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
             <li>Take a left onto 29th street</li>
             <li>Next, head straight onto Liberty Memorial Mall and Park.</li>
         </ol>
+        <h1>Attractions nearby</h1>
+        <ul>
+            <li>The Neslon Atkins Museum of Art</li>
+            <li>Union Station</li>
+            <li>Science City</li>
+            <li>LEGOLAND Discovery Center Kansas City</li>
+            <li>The College Basketball Experience</li>
+            <li>Worlds of Fun</li>
+            <li>Kansas City Zoo</li>
+        </ul>
 
     </body>
 </html>
