--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
             <li>Worlds of Fun</li>
             <li>Kansas City Zoo</li>
         </ul>
-
+        <link rel="About Me" href="aboutme.html">
     </body>
 </html>
