--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <h2>National WWI Museum and Memorial</h2>
         <p>There are plenty of things to do and see at this museum. You can see many artifacts such as <b>tanks</b> and planes that were used. 
            You can also see the weapons and what it was like to be in the <b>trenches</b> and how they worked.</p>
-        <hr></hr>
+        <hr>
         <h1>Directions</h1>
         <h2>Kansas City International Airport</h2>
         <ol>
@@ -34,5 +34,35 @@
             <li>Kansas City Zoo</li>
         </ul>
         <link rel="About Me" href="aboutme.html">
+        <hr>
+        <h1>Cities to Visit</h1>
+        <p>Below is a table with 4 cities that I would recommend to visit, locations that are worth visiting, and how long I would recommend staying at the attraction.</p>
+        <table>
+            <tr>
+                <td>City</td>
+                <td>Important Location</td>
+                <td>Time Spent</td>
+            </tr>
+            <tr>
+                <td>Chicago, IL</td>
+                <td>Skydeck Chicago</td>
+                <td>2 Hours</td>
+            </tr>
+            <tr>
+                <td>Beaver Creek, CO</td>
+                <td>Beever Creek resort</td>
+                <td>3-7 Days</td>
+            </tr>
+            <tr>
+                <td>Branson, MO</td>
+                <td>Silver Dollar City</td>
+                <td>5 Hours</td>
+            </tr>
+            <tr>
+                <td>Dallas, TX</td>
+                <td>Reunion Tower Geo-Deck</td>
+                <td>2 Hours</td>
+            </tr>
+        </table>
     </body>
 </html>
