--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
             <li>Worlds of Fun</li>
             <li>Kansas City Zoo</li>
         </ul>
-        <link rel="About Me" href="aboutme.html">
+
+        <a href="aboutme.html">About Me</a>
+        
         <hr>
         <h1>Cities to Visit</h1>
         <p>Below is a table with 4 cities that I would recommend to visit, locations that are worth visiting, and how long I would recommend staying at the attraction.</p>
