--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <blockquote cite="https://stackoverflow.com/questions/1962031/how-to-check-if-a-string-starts-with-in-php">
             How to check if a string starts with "_" in PHP?
         </blockquote>
-        <pre>
+        <code>
         <?php 
   
         function startsWith($string, $startString) { 
@@ -87,6 +87,6 @@
         echo startsWith("dog", "x"); // false
 
         ?> 
-        </pre>
+    </code>
     </body>
 </html>
