--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
 
         <h1>Code Snippet</h1>
         <blockquote cite="https://stackoverflow.com/questions/1962031/how-to-check-if-a-string-starts-with-in-php">
-            How to check if a string starts with "_" in PHP?
+            "How to check if a string starts with "_" in PHP?"
         </blockquote>
-        <code>
-        <?php 
+        <pre>
+        ?php 
   
         function startsWith($string, $startString) { 
             $len = strlen($startString); 
@@ -87,6 +87,6 @@
         echo startsWith("dog", "x"); // false
 
         ?> 
-    </code>
+    </pre>
     </body>
 </html>
